names changed, added sass

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </head>
     <body>
         <header>
-            <h1>El roscow de <span>pasapalabra</span></h1>
+            <h1>El isdi-roscow de <span>pasapalabra</span></h1>
         </header>
         <main>
-            <div class="roscow">
-                <ul class="letters">
+            <div class="roscow-wrapper">
+                <ul class="roscow">
                     <li class="letter"><span class="inner-letter">A</span></li>
                     <li class="letter"><span class="inner-letter">B</span></li>
                     <li class="letter"><span class="inner-letter">C</span></li>
@@ -78,6 +78,6 @@
                 >
             </address>
         </footer>
-        <script type="text/javascript" src="master.js"></script>
+        <script type="text/javascript" src="assets/js/master.js"></script>
     </body>
 </html>
