added centra panel ui to play

--- a/index.html
+++ b/index.html
@@ -51,7 +51,24 @@
                     <span class="counter-success">0</span>
                 </div>
                 <div class="panel">
-                    <div class="inner-panel">130</div>
+                    <div class="inner-panel inner-panel-begin">
+                        <p>Vas a jugar al Isdi-Roscow</p>
+                        <p class="smaller">Recuerda escribir sin tildes</p>
+                        <button class="begin btn-dark">Empezar</button>
+                    </div>
+                    <div class="inner-panel inner-panel-game">
+                        <p class="begin-with btn-light">
+                            Empieza por <span>A</span>
+                        </p>
+                        <p class="question">Primera pregunta</p>
+                        <input
+                            type="text"
+                            placeholder="Escrible tu respuesta"
+                            class="input"
+                        />
+                        <button class="response-question btn-dark">v</button>
+                        <button class="pass-question">PASAPALABRA</button>
+                    </div>
                 </div>
                 <div class="counters">
                     <div class="wrap-counter-fails">
