main functionality done, styling counters

--- a/index.html
+++ b/index.html
@@ -20,35 +20,85 @@
         <main>
             <div class="roscow-wrapper">
                 <ul class="roscow">
-                    <li class="letter"><span class="inner-letter">A</span></li>
-                    <li class="letter"><span class="inner-letter">B</span></li>
-                    <li class="letter"><span class="inner-letter">C</span></li>
-                    <li class="letter"><span class="inner-letter">D</span></li>
-                    <li class="letter"><span class="inner-letter">E</span></li>
-                    <li class="letter"><span class="inner-letter">F</span></li>
-                    <li class="letter"><span class="inner-letter">G</span></li>
-                    <li class="letter"><span class="inner-letter">H</span></li>
-                    <li class="letter"><span class="inner-letter">I</span></li>
-                    <li class="letter"><span class="inner-letter">J</span></li>
-                    <li class="letter"><span class="inner-letter">L</span></li>
-                    <li class="letter"><span class="inner-letter">M</span></li>
-                    <li class="letter"><span class="inner-letter">N</span></li>
-                    <li class="letter"><span class="inner-letter">Ñ</span></li>
-                    <li class="letter"><span class="inner-letter">O</span></li>
-                    <li class="letter"><span class="inner-letter">P</span></li>
-                    <li class="letter"><span class="inner-letter">Q</span></li>
-                    <li class="letter"><span class="inner-letter">R</span></li>
-                    <li class="letter"><span class="inner-letter">S</span></li>
-                    <li class="letter"><span class="inner-letter">T</span></li>
-                    <li class="letter"><span class="inner-letter">U</span></li>
-                    <li class="letter"><span class="inner-letter">V</span></li>
-                    <li class="letter"><span class="inner-letter">X</span></li>
-                    <li class="letter"><span class="inner-letter">Y</span></li>
-                    <li class="letter"><span class="inner-letter">Z</span></li>
+                    <li class="letter letter-a">
+                        <span class="inner-letter">A</span>
+                    </li>
+                    <li class="letter letter-b">
+                        <span class="inner-letter">B</span>
+                    </li>
+                    <li class="letter letter-c">
+                        <span class="inner-letter">C</span>
+                    </li>
+                    <li class="letter letter-d">
+                        <span class="inner-letter">D</span>
+                    </li>
+                    <li class="letter letter-e">
+                        <span class="inner-letter">E</span>
+                    </li>
+                    <li class="letter letter-f">
+                        <span class="inner-letter">F</span>
+                    </li>
+                    <li class="letter letter-g">
+                        <span class="inner-letter">G</span>
+                    </li>
+                    <li class="letter letter-h">
+                        <span class="inner-letter">H</span>
+                    </li>
+                    <li class="letter letter-i">
+                        <span class="inner-letter">I</span>
+                    </li>
+                    <li class="letter letter-j">
+                        <span class="inner-letter">J</span>
+                    </li>
+                    <li class="letter letter-l">
+                        <span class="inner-letter">L</span>
+                    </li>
+                    <li class="letter letter-m">
+                        <span class="inner-letter">M</span>
+                    </li>
+                    <li class="letter letter-n">
+                        <span class="inner-letter">N</span>
+                    </li>
+                    <li class="letter letter-ñ">
+                        <span class="inner-letter">Ñ</span>
+                    </li>
+                    <li class="letter letter-o">
+                        <span class="inner-letter">O</span>
+                    </li>
+                    <li class="letter letter-p">
+                        <span class="inner-letter">P</span>
+                    </li>
+                    <li class="letter letter-q">
+                        <span class="inner-letter">Q</span>
+                    </li>
+                    <li class="letter letter-r">
+                        <span class="inner-letter">R</span>
+                    </li>
+                    <li class="letter letter-s">
+                        <span class="inner-letter">S</span>
+                    </li>
+                    <li class="letter letter-t">
+                        <span class="inner-letter">T</span>
+                    </li>
+                    <li class="letter letter-u">
+                        <span class="inner-letter">U</span>
+                    </li>
+                    <li class="letter letter-v">
+                        <span class="inner-letter">V</span>
+                    </li>
+                    <li class="letter letter-x">
+                        <span class="inner-letter">X</span>
+                    </li>
+                    <li class="letter letter-y">
+                        <span class="inner-letter">Y</span>
+                    </li>
+                    <li class="letter letter-z">
+                        <span class="inner-letter">Z</span>
+                    </li>
                 </ul>
                 <div class="timer-success">
-                    <span class="timer">130</span>
-                    <span class="counter-success">0</span>
+                    <span class="counter-timer">130</span>
+                    <span class="counter-success succeeded">0</span>
                 </div>
                 <div class="panel">
                     <div class="inner-panel inner-panel-begin">
@@ -58,31 +108,25 @@
                     </div>
                     <div class="inner-panel inner-panel-game">
                         <p class="begin-with btn-light">
-                            Empieza por <span>A</span>
+                            Empieza por <span></span>
                         </p>
                         <p class="question">Primera pregunta</p>
                         <input
                             type="text"
                             placeholder="Escrible tu respuesta"
-                            class="input"
+                            class="input-answer"
                         />
                         <button class="response-question btn-dark">v</button>
                         <button class="pass-question">PASAPALABRA</button>
                     </div>
                 </div>
                 <div class="counters">
-                    <div class="wrap-counter-fails">
-                        <span class="label-counter-fails"
-                            >Palabras falladas</span
-                        >
-                        <span class="counter-fails">0</span>
-                    </div>
-                    <div class="wrap-counter-remaining">
-                        <span class="label-counter-remaining"
-                            >Palabras restantes</span
-                        >
-                        <span class="counter-remaining">25</span>
-                    </div>
+                    <span class="label-counter-fails">Palabras falladas</span>
+                    <span class="counter-fails failed">0</span>
+                    <span class="label-counter-remaining"
+                        >Palabras restantes</span
+                    >
+                    <span class="counter-remaining">25</span>
                 </div>
             </div>
         </main>
