--- a/index.html
+++ b/index.html
@@ -141,32 +141,9 @@
                     <span class="counter-remaining">25</span>
                 </div>
             </div>
-            <div class="modal modal-ended">
-                <div class="inner-panel inner-panel-final">
-                    <p>¡Enhorabuena!<br />Has completado el isdi-roscow.</p>
-                    <p>Estos son tu tiempo y resultados:</p>
-                    <table class="results">
-                        <thead>
-                            <tr>
-                                <th>Tiempo</th>
-                                <th>Aciertos</th>
-                                <th>Fallos</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="counter-final-time">0</td>
-                                <td class="counter-success">0</td>
-                                <td class="counter-fails">0</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <button class="rebegin btn-dark">Volver a jugar</button>
-                </div>
-            </div>
             <div class="modal modal-timer">
                 <div class="inner-panel inner-panel-final">
-                    <p>¡Vaya, lo semtimos!<br />el tiempo se ha acabado.</p>
+                    <p>¡Vaya, lo sentimos!<br />el tiempo se ha acabado.</p>
                     <p class="">
                         Nos has podido terminar, pero estos son los resultados
                         que has obtenido:
@@ -191,6 +168,29 @@
                     <span class="counter-fails failed">0</span>
                     <span class="counter-remaining">0</span> -->
                     <button class="rebegin btn-dark">Volver a jugar</button>
+                </div>
+            </div>
+            <div class="modal modal-ended">
+                <div class="inner-panel inner-panel-final">
+                    <p>¡Enhorabuena!<br />Has completado el isdi-roscow.</p>
+                    <p>Estos son tu tiempo y resultados:</p>
+                    <table class="results">
+                        <thead>
+                            <tr>
+                                <th>Tiempo</th>
+                                <th>Aciertos</th>
+                                <th>Fallos</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="counter-final-time">0</td>
+                                <td class="counter-success">0</td>
+                                <td class="counter-fails">0</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <button class="btnRebegin btn-dark">Volver a jugar</button>
                 </div>
             </div>
         </main>
